<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/mainFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="headerFlow,textView4,buttonsFlow"
        app:flow_verticalGap="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.162" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/userdataFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="textView,textView2"
        app:layout_constraintBottom_toBottomOf="@+id/headerFlow"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="153dp"
        app:shapeAppearanceOverlay="@style/circleShape"
        app:srcCompat="@drawable/profile_pic"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="384dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/role"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="266dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="232dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/buttonsFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="btnGithub,btnLinkedin"
        app:flow_horizontalGap="16sp"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="514dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/headerFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="imageView, userdataFlow"
        app:flow_horizontalAlign="start"
        app:flow_horizontalGap="16dp"
        app:flow_horizontalStyle="spread"
        tools:layout_editor_absoluteY="193dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="363dp"
        android:layout_height="38dp"
        android:layout_marginTop="300dp"
        android:text="@string/bio"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="48dp" />

    <Button
        android:id="@+id/btnGithub"
        style="@style/Widget.GithubColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:text="@string/github"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="509dp" />

    <Button
        android:id="@+id/btnLinkedin"
        style="@style/Widget.LinkedinColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linkedin"

        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="509dp" />

    <Switch
        android:id="@+id/darkModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:text="Dark Mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>